--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,5 @@
 version = "2.7.5"
 maxColumn = 80
+align.preset = more
 newlines.alwaysBeforeTopLevelStatements = true
 rewrite.rules = [SortImports]
